Implement GET Many Affiliate endpoint
